<resources>
    <string name="app_name">AlbatrossConnect</string>
    <string name="professors">Professors</string>
    <string name="courses">Courses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Professor_Lookup">Professor Lookup</string>
    <string name="albatross_connect">Albatross Connect</string>
    <string name="what_information_are_you_seeking">What information are you seeking?</string>
    <string name="course_descriptions">Course Descriptions</string>
    <string name="todo">TODO</string>
    <string name="position">Position</string>
    <string name="department">Department</string>
    <string name="phone">Phone Number</string>
    <string name="email">email</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="CRN">CRN: 43434</string>
    <string name="search">Search Here</string>
    <string name="select_a_course_you_are_interested_in">Select a course you are interested in</string>
    <string name="select_a_professor_you_want">Select a professor you want</string>
    <string name="professor_name">Professor Name</string>
    <string name="review">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.</string>
    <string name="professor_or_course">Professor/Course</string>
    <string name="years_taken">Year Taken</string>
    <string name="rating_review_page">3.0\nOK</string>
    <string name="sender">Sender</string>
    <string name="date">Nov 25</string>
    <string name="user_icon">User Icon</string>
    <string name="message">Message</string>
    <string name="time">8:35 pm</string>
    <string name="user_name">User Name</string>
    <string name="user_name">User Name</string>
</resources>