<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ratings"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:background="#F6D55C"
            android:text="@string/rating_review_page"
            android:textColor="@color/black"
            android:gravity="center"/>

        <TextView
            android:id="@+id/professor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ratings"
            android:text="@string/years_taken"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/professor_or_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/professor_name"
            android:text="@string/professor_or_course"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/professor_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ratings"
            android:drawablePadding="2dp"
            android:text="@string/review"
            app:drawableStartCompat="@drawable/ic_baseline_library_books_24" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
