<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/course_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/course_code"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/course_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="177dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:rating="2.5" />

        <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_code"
            android:layout_marginTop="10dp"
            android:text="@string/course_name"
            app:drawableStartCompat="@drawable/ic_baseline_library_books_24" />

        <TextView
            android:id="@+id/professor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_code"
            android:layout_toEndOf="@+id/course_name"
            android:layout_marginTop="10dp"
            android:text="@string/professor_name"
            android:layout_marginStart="10dp"
            app:drawableStartCompat="@drawable/ic_baseline_library_books_24" />

        <TextView
            android:id="@+id/course_crn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_rating"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/CRN"
            app:drawableStartCompat="@drawable/ic_baseline_library_books_24" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
